@@ -84,40 +84,40 @@
         <scala.library.version>2.13.16</scala.library.version>
         <avatica.version>1.28.0</avatica.version>
         <avro.version>1.12.2</avro.version>
-        <parquet.version>1.18.0</parquet.version>
-        <bytebuddy.version>1.18.12</bytebuddy.version>
+        <parquet.version>1.18.1</parquet.version>
+        <bytebuddy.version>1.18.14</bytebuddy.version>
         <!--
             The base calcite parser was copied into the project; when updating Calcite run dev/upgrade-calcite-parser to adopt upstream changes
           -->
-        <calcite.version>1.41.0</calcite.version>
+        <calcite.version>1.42.0</calcite.version>
         <confluent.version>8.3.1</confluent.version>
         <cronutils.version>9.2.1</cronutils.version>
         <datasketches.version>4.2.0</datasketches.version>
         <datasketches.memory.version>2.2.0</datasketches.memory.version>
         <derby.version>10.17.1.0</derby.version>
-        <dropwizard.metrics.version>4.2.39</dropwizard.metrics.version>
+        <dropwizard.metrics.version>4.2.40</dropwizard.metrics.version>
         <errorprone.annotations.version>2.50.0</errorprone.annotations.version>
         <errorprone.version>2.50.0</errorprone.version>
-        <fabric8.version>7.8.0</fabric8.version>
+        <fabric8.version>7.9.0</fabric8.version>
         <fastutil.version>8.5.4</fastutil.version>
         <guava.version>33.7.1-jre</guava.version>
         <guice.version>6.0.0</guice.version>
         <hamcrest.version>3.0</hamcrest.version>
         <iceberg.core.version>1.11.0</iceberg.core.version>
-        <jetty.version>12.1.12</jetty.version>
+        <arrow.version>15.0.2</arrow.version>
+        <jetty.version>12.1.13</jetty.version>
         <jspecify.version>1.0.1</jspecify.version>
         <jersey.version>1.19.4</jersey.version>
         <jackson.version>2.22.2</jackson.version>
         <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
         <log4j.version>2.26.1</log4j.version>
         <mysql.version>26.7.0</mysql.version>
-        <mariadb.version>2.7.3</mariadb.version>
-        <netty3.version>3.10.6.Final</netty3.version>
-        <netty4.version>4.2.17.Final</netty4.version>
+        <mariadb.version>3.5.10</mariadb.version>
+        <netty4.version>4.2.18.Final</netty4.version>
         <postgresql.version>42.7.13</postgresql.version>
-        <protobuf.version>4.35.1</protobuf.version>
+        <protobuf.version>4.36.1</protobuf.version>
         <resilience4j.version>2.4.0</resilience4j.version>
-        <slf4j.version>2.0.18</slf4j.version>
+        <slf4j.version>2.0.19</slf4j.version>
         <jna.version>5.19.1</jna.version>
         <jna-platform.version>5.19.1</jna-platform.version>
         <hadoop.compile.version>3.5.0</hadoop.compile.version>
@@ -126,20 +126,20 @@
         <!-- AWS SDK v1 is still used as a transitive dependency by Hadoop and Ranger extensions.
              It should be removed once those extensions are upgraded or dropped (see #19109). -->
         <aws.sdk.v1.version>1.12.797</aws.sdk.v1.version>
-        <aws.sdk.v2.version>2.54.2</aws.sdk.v2.version>
+        <aws.sdk.v2.version>2.54.19</aws.sdk.v2.version>
         <caffeine.version>3.2.4</caffeine.version>
-        <jacoco.version>0.8.14</jacoco.version>
+        <jacoco.version>0.8.15</jacoco.version>
         <testcontainers.version>2.0.5</testcontainers.version>
         <hibernate-validator.version>9.1.3.Final</hibernate-validator.version>
         <httpclient.version>4.5.14</httpclient.version>
         <okhttp.version>5.5.0</okhttp.version>
         <kubernetes.client.version>25.0.0-legacy</kubernetes.client.version>
         <zookeeper.version>3.8.6</zookeeper.version>
-        <checkerframework.version>4.2.2</checkerframework.version>
+        <checkerframework.version>4.2.3</checkerframework.version>
         <com.google.apis.client.version>2.7.2</com.google.apis.client.version>
         <com.google.http.client.apis.version>2.2.0</com.google.http.client.apis.version>
         <com.google.apis.compute.version>v1-rev20230606-2.0.0</com.google.apis.compute.version>
-        <com.google.cloud.storage.version>2.71.0</com.google.cloud.storage.version>
+        <com.google.cloud.storage.version>2.73.0</com.google.cloud.storage.version>
         <jdk.strong.encapsulation.argLine>
             <!-- Strong encapsulation parameters -->
             <!-- When updating this list, update all four locations: -->
@@ -250,6 +250,7 @@
         <module>extensions-contrib/druid-exact-count-bitmap</module>
         <module>extensions-contrib/statsd-emitter</module>
         <module>extensions-contrib/time-min-max</module>
+        <module>extensions-contrib/druid-opa-authorizer</module>
         <module>extensions-contrib/virtual-columns</module>
         <module>extensions-contrib/thrift-extensions</module>
         <module>extensions-contrib/ambari-metrics-emitter</module>
@@ -285,15 +286,6 @@
             <id>${repoOrgId}</id>
             <name>${repoOrgName}</name>
             <url>${repoOrgUrl}</url>
-            <snapshots>
-               <enabled>false</enabled>
-            </snapshots>
-        </repository>
-
-        <!-- Only used by core, but moved to root for parallel build dependency resolution -->
-        <repository>
-            <id>sigar</id>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public</url>
             <snapshots>
                <enabled>false</enabled>
             </snapshots>
@@ -438,12 +430,36 @@
                 <version>3.8.7</version>
             </dependency>
 
+            <!-- Arrow + Iceberg-Arrow -->
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-vector</artifactId>
+                <version>${arrow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-memory-unsafe</artifactId>
+                <version>${arrow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.iceberg</groupId>
+                <artifactId>iceberg-arrow</artifactId>
+                <version>${iceberg.core.version}</version>
+            </dependency>
+            <!-- transitive dependency of calcite-core and avatica-core, which require different
+            versions; pinned to the higher of the two -->
+            <dependency>
+                <groupId>org.jooq</groupId>
+                <artifactId>joou-java-6</artifactId>
+                <version>0.9.5</version>
+            </dependency>
+
             <!-- transitive dependency of kafka-clients and kubernetes client
             this should get resolved with the update of above depdendencies -->
             <dependency>
                 <groupId>org.bitbucket.b_c</groupId>
                 <artifactId>jose4j</artifactId>
-                <version>0.9.6</version>
+                <version>0.9.7</version>
             </dependency>
             <!-- transitive dependency of kafka-clientorg.apache.calcite:calcite-testkit
             and kafka-protobuf-provider
@@ -451,7 +467,7 @@
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
-                <version>2.4.10</version>
+                <version>2.4.20</version>
             </dependency>
             <dependency>
                 <groupId>org.jetbrains</groupId>
@@ -472,12 +488,12 @@
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk18on</artifactId>
-                <version>1.85.2</version>
+                <version>1.86</version>
             </dependency>
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpkix-jdk18on</artifactId>
-                <version>1.85</version>
+                <version>1.86</version>
             </dependency>
             <!-- Transitive dependency of hive-common in druid-kerberos, druid-ranger-security and
             druid-iceberg-extension  -->
@@ -504,12 +520,12 @@
             <dependency>
                 <groupId>com.squareup.okio</groupId>
                 <artifactId>okio</artifactId>
-                <version>3.18.1</version>
+                <version>3.18.2</version>
             </dependency>
             <dependency>
                 <groupId>com.squareup.okio</groupId>
                 <artifactId>okio-jvm</artifactId>
-                <version>3.18.1</version>
+                <version>3.18.2</version>
             </dependency>
             <dependency>
                 <groupId>redis.clients</groupId>
@@ -519,7 +535,7 @@
             <dependency>
                 <groupId>com.github.fppt</groupId>
                 <artifactId>jedis-mock</artifactId>
-                <version>1.1.17</version>
+                <version>1.1.19</version>
             </dependency>
             <dependency>
               <groupId>io.kubernetes</groupId>
@@ -910,11 +926,6 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
-                <artifactId>netty</artifactId>
-                <version>${netty3.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.netty</groupId>
                 <artifactId>netty-bom</artifactId>
                 <version>${netty4.version}</version>
                 <scope>import</scope>
@@ -1012,7 +1023,7 @@
             <dependency>
                 <groupId>at.yawk.lz4</groupId>
                 <artifactId>lz4-java</artifactId>
-                <version>1.11.2</version>
+                <version>1.11.3</version>
             </dependency>
             <dependency>
                 <groupId>org.xerial.snappy</groupId>
@@ -1119,7 +1130,7 @@
             <dependency>
                 <groupId>net.thisptr</groupId>
                 <artifactId>jackson-jq</artifactId>
-                <version>1.6.2</version>
+                <version>1.6.5</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -1129,12 +1140,12 @@
             <dependency>
                 <groupId>org.roaringbitmap</groupId>
                 <artifactId>RoaringBitmap</artifactId>
-                <version>1.6.20</version>
+                <version>1.6.23</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
-                <version>2.5</version>
+                <version>2.7</version>
             </dependency>
             <dependency>
                 <groupId>io.airlift</groupId>
@@ -1159,7 +1170,7 @@
             <dependency>
                 <groupId>org.asynchttpclient</groupId>
                 <artifactId>async-http-client</artifactId>
-                <version>3.0.11</version>
+                <version>3.0.13</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
@@ -1264,7 +1275,7 @@
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.14.3</version>
+                <version>6.1.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -1287,7 +1298,7 @@
             <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
-                <version>5.6.0</version>
+                <version>5.7.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -1412,7 +1423,7 @@
             <dependency>
                 <groupId>com.google.auto.value</groupId>
                 <artifactId>auto-value-annotations</artifactId>
-                <version>1.11.0</version>
+                <version>1.11.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.http-client</groupId>
@@ -1485,7 +1496,7 @@
             <dependency>
                 <groupId>nl.jqno.equalsverifier</groupId>
                 <artifactId>equalsverifier</artifactId>
-                <version>4.5.1</version>
+                <version>4.5.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -1610,12 +1621,12 @@
                     <dependency>
                         <groupId>org.openrewrite.recipe</groupId>
                         <artifactId>rewrite-apache</artifactId>
-                        <version>2.29.0</version>
+                        <version>2.30.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.openrewrite.recipe</groupId>
                         <artifactId>rewrite-jackson</artifactId>
-                        <version>1.28.4</version>
+                        <version>1.29.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -1722,7 +1733,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.10.2.0</version>
+                <version>4.10.4.1</version>
                 <configuration>
                     <excludeFilterFile>codestyle/spotbugs-exclude.xml</excludeFilterFile>
                     <maxHeap>768</maxHeap>
@@ -1814,7 +1825,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.27</version>
+                <version>1.28</version>
                 <executions>
                     <execution>
                         <id>check-java-api</id>
@@ -1923,7 +1934,7 @@
             <plugin>
                 <groupId>io.github.git-commit-id</groupId>
                 <artifactId>git-commit-id-maven-plugin</artifactId>
-                <version>10.0.0</version>
+                <version>10.0.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -1935,7 +1946,7 @@
                     <dependency>
                         <groupId>org.bouncycastle</groupId>
                         <artifactId>bcpkix-jdk18on</artifactId>
-                        <version>1.84</version>
+                        <version>1.86</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -1989,7 +2000,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>12.2.0</version>
+                <version>13.0.0</version>
                 <configuration>
                     <nvdApiKey>${nvdApiKey}</nvdApiKey>
                     <failBuildOnCVSS>7</failBuildOnCVSS>
@@ -2030,7 +2041,7 @@
                   <dependency>
                     <groupId>org.codehaus.plexus</groupId>
                     <artifactId>plexus-utils</artifactId>
-                    <version>3.6.1</version>
+                    <version>4.1.0</version>
                   </dependency>
                 </dependencies>
               </plugin>
@@ -2042,11 +2053,12 @@
               <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.6</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <!-- locale settings must be set on the command line before startup -->
                         <!-- set default options -->
                         <argLine>
+                            -XX:+UseCompactObjectHeaders
                             @{jacocoArgLine}
                             ${jdk.strong.encapsulation.argLine}
                             -Xmx2048m
@@ -2127,7 +2139,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>3.6.4</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -2137,7 +2149,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.6.1</version>
+                    <version>3.6.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -2158,7 +2170,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.15.0</version>
+                    <version>3.16.0</version>
                     <inherited>true</inherited>
                     <configuration>
                         <release>${maven.compiler.release}</release>
@@ -2251,6 +2263,7 @@
                             <!-- locale settings must be set on the command line before startup -->
                             <!-- set heap size to work around https://github.com/travis-ci/travis-ci/issues/3396 -->
                             <argLine>
+                                -XX:+UseCompactObjectHeaders
                                 -Xmx768m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8
                                 -XX:+ExitOnOutOfMemoryError
                                 -XX:+HeapDumpOnOutOfMemoryError
